{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 28,
  "lineage": "03b67a1a-9ecf-4bb8-b32d-a300330090e7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/800135f6-443e-462d-8730-9f777d29bb2e/resourceGroups/terraform/providers/Microsoft.Network/networkInterfaces/vm-nic",
            "internal_domain_name_suffix": "sptnnowhfplenb5klnifeqds1c.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/800135f6-443e-462d-8730-9f777d29bb2e/resourceGroups/terraform/providers/Microsoft.Network/publicIPAddresses/vm_public_ip",
                "subnet_id": "/subscriptions/800135f6-443e-462d-8730-9f777d29bb2e/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/terraform-Vnet/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2E-05-A5",
            "name": "vm-nic",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "terraform",
            "virtual_machine_id": "/subscriptions/800135f6-443e-462d-8730-9f777d29bb2e/resourceGroups/terraform/providers/Microsoft.Compute/virtualMachines/krishna-vm"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/800135f6-443e-462d-8730-9f777d29bb2e/resourceGroups/terraform/providers/Microsoft.Network/networkSecurityGroups/terraform-Nsg",
            "location": "eastus",
            "name": "terraform-Nsg",
            "resource_group_name": "terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "security-rule",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "srule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/800135f6-443e-462d-8730-9f777d29bb2e/resourceGroups/terraform/providers/Microsoft.Network/networkSecurityGroups/terraform-Nsg/securityRules/security-rule",
            "name": "security-rule",
            "network_security_group_name": "terraform-Nsg",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "terraform",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/800135f6-443e-462d-8730-9f777d29bb2e/resourceGroups/terraform/providers/Microsoft.Network/publicIPAddresses/vm_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.124.250.88",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vm_public_ip",
            "resource_group_name": "terraform",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/800135f6-443e-462d-8730-9f777d29bb2e/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/terraform-Vnet/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "terraform",
            "virtual_network_name": "terraform-Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/800135f6-443e-462d-8730-9f777d29bb2e/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/terraform-Vnet/subnets/subnet2",
            "name": "subnet2",
            "resource_group_name": "terraform",
            "virtual_network_name": "terraform-Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "bad6e693-2bc7-46d6-87ea-5b50524072da",
            "id": "/subscriptions/800135f6-443e-462d-8730-9f777d29bb2e/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/terraform-Vnet",
            "location": "eastus",
            "name": "terraform-Vnet",
            "resource_group_name": "terraform",
            "subnet": [
              {
                "address_prefix": "10.10.1.0/24",
                "id": "/subscriptions/800135f6-443e-462d-8730-9f777d29bb2e/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/terraform-Vnet/subnets/subnet1",
                "name": "subnet1"
              },
              {
                "address_prefix": "10.10.2.0/24",
                "id": "/subscriptions/800135f6-443e-462d-8730-9f777d29bb2e/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/terraform-Vnet/subnets/subnet2",
                "name": "subnet2"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}